fix flicker effect
the calculation don't think of margin of the body
set the margin fix
4px each side 8px and 2px for border each side 1px equels 10px less

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,6 +1,7 @@
 body {
   font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
   font-size: 12px;
+  margin: 4px;
 }
 
 table {
